<resources>
    <string name="app_name">Envelope</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="envelopes_title_text">Envelopes</string>
    <string name="image_description">Image Description</string>
    <string name="envelope">Envelope</string>
    <string name="envelopTotal">$ %.2f</string>
    <string name="select_the_envelope_category_to_add">Select The Envelope Category To Add</string>
    <string name="add_envelope">Add Envelope</string>
    <string name="select_a_envelope">Select a Envelope</string>
    <string name="merchandise">Merchandise</string>
    <string name="deptStores">Department Stores</string>
    <string name="gas">Gas</string>
    <string name="education">Education</string>
    <string name="restaurants">Restaurants</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="automotive">Automotive</string>
    <string name="travel">Travel/Entertainment</string>
    <string name="select_icon">Select Icon</string>
    <string name="create">Create</string>
    <string name="transactions_page_title">Transactions</string>
    <string name="welcome_to_envelope">Welcome To Envelope</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="first_time_here">First time here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="envelope_icon">envelope icon</string>
    <string name="usernameNullError">Username cannot be empty.</string>
    <string name="passwordNullError">Password cannot be empty.</string>
    <string name="passwordLengthError">Password must be at least 8 characters.</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
</resources>