<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.fragment.LoginFragment">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_envelope_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username_hint"
        android:textColorHint="@color/light_grey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconTint="@color/light_grey"
        app:startIconDrawable="@drawable/ic_user"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/light_grey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconTint="@color/light_grey"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/login_text"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/firstTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_time_here"
        android:textColor="@color/dark_grey"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="12sp"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toEndOf="@id/firstTimeText"/>

</androidx.constraintlayout.widget.ConstraintLayout>